Batch update S3 state store